--- a/ДЗ2/index.html
+++ b/ДЗ2/index.html
@@ -23,15 +23,15 @@
 			</div>
 
 			<div class="container__basket">
-				<img src="assets/img/Forma_1.svg" alt="">
-				<a href="#" class="container__basket__button">My Account <p>&#9660;</p></a>
+				<a href="#"><img src="assets/img/Forma_1.svg" alt=""></a>
+				<a href="#" class="container__basket__button">My Account<p>&#9660;</p></a>
 			</div>
 		</div>
 		<hr>
 		<nav class="navigation">
 			<ul class="menu">
 				<li><a href="#">Home</a></li>
-				<li><a href="#">Man</a></li>
+				<li><a href="assets/html/catalog.html">Man</a></li>
 				<li><a href="#">Women</a></li>
 				<li><a href="#">Kids</a></li>
 				<li><a href="#">Accoseriese</a></li>
