--- a/ДЗ3/assets/html/catalog.html
+++ b/ДЗ3/assets/html/catalog.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="../css/style2.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/4b1da41dd8.js"></script>
 </head>
 <body>
 	<header>
@@ -18,7 +19,35 @@
 
 				<div class="container__search">
 					<form action="#">
-						<a href="#">Browse<img src="../img/1.png" alt=""></a><input type="text" placeholder="Search for Item..."><a href="#" class="container__search__button"><img src="../img/2.png" alt=""></a>
+						<div class="dropDown__link"><a href="#" id="container__search_link">Browse<img src="../img/1.png" alt=""></a>
+							<div class="dropDownMain">
+								<div class="dropDrown">
+									<h1>WOMEN</h1>
+									<hr>
+									<div class="dropDown__link2">
+										<a href="#">Dresses</a>
+										<a href="#">Tops</a>
+										<a href="#">Sweaters/Knits</a>
+										<a href="#">Jackets/Coats</a>
+										<a href="#">Blazers</a>
+										<a href="#">Denim</a>
+										<a href="#">Leggings/Pants</a>
+										<a href="#">Skirts/Shorts</a>
+										<a href="#">Accessories</a>
+									</div>
+									<h1>MEN</h1>
+									<hr>
+									<div class="dropDown__link2">
+										<a href="#">Tees/Tank tops</a>
+										<a href="#">Shirts/Polos</a>
+										<a href="#">Sweaters</a>
+										<a href="#">Sweatshirts/Hoodies</a>
+										<a href="#">Blazers</a>
+										<a href="#">Jackets/vests</a>
+									</div>
+								</div>
+							</div>
+					</div><input type="text" placeholder="Search for Item..."><a href="#" id="container__search_link" class="container__search__button"><img src="../img/2.png" alt=""></a>
 					</form>
 				</div>
 			</div>
@@ -32,8 +61,57 @@
 		<nav class="navigation">
 			<ul class="menu">
 				<li><a href="../../index.html">Home</a></li>
-				<li><a href="#">Man</a></li>
-				<li><a href="#">Women</a></li>
+				<li class="li__drop__navigation"><a href="#">Man</a>
+					<div class="drop__navigation">
+						<div class="drop__navigation__block triangle">
+							<h1>WOMEN</h1>
+							<hr>
+							<div class="dropDown__link2">
+								<a href="#">Dresses</a>
+								<a href="#">Tops</a>
+								<a href="#">Sweaters/Knits</a>
+								<a href="#">Jackets/Coats</a>
+								<a href="#">Blazers</a>
+								<a href="#">Denim</a>
+								<a href="#">Leggings/Pants</a>
+								<a href="#">Skirts/Shorts</a>
+								<a href="#">Accessories</a>
+							</div>
+						</div>
+
+						<div class="drop__navigation__block">
+							<h1>WOMEN</h1>
+							<hr>
+							<div class="dropDown__link2">
+								<a href="#">Dresses</a>
+								<a href="#">Tops</a>
+								<a href="#">Sweaters/Knits</a>
+								<a href="#">Jackets/Coats</a>
+							</div>
+
+							<h1>WOMEN</h1>
+							<hr>
+							<div class="dropDown__link2">
+								<a href="#">Dresses</a>
+								<a href="#">Tops</a>
+								<a href="#">Sweaters/Knits</a>
+							</div>
+						</div>
+
+						<div class="drop__navigation__block padding">
+							<h1>WOMEN</h1>
+							<hr>
+							<div class="dropDown__link2 padding2">
+								<a href="#">Dresses</a>
+								<a href="#">Tops</a>
+								<a href="#">Sweaters/Knits</a>
+								<a href="#">Jackets/Coats</a>
+							</div>
+							<img src="../img/Layer_42 (1).png" alt="">
+						</div>
+					</div>
+				</li>
+				<li><a href="SinglePage.html">Women</a></li>
 				<li><a href="#">Kids</a></li>
 				<li><a href="#">Accoseriese</a></li>
 				<li><a href="#">Featured</a></li>
@@ -335,7 +413,9 @@
 			</div>
 
 			<div class="subscribe__input">
-				<input type="text" placeholder="Enter Your Email"><a href="#">Subscribe</a>
+				<form action="#">
+					<input type="email" placeholder="Enter Your Email" required><input type="submit" value="Subscribe">
+				</form>
 			</div>
 		</div>
 
