--- a/DZ5/assets/html/SinglePage.html
+++ b/DZ5/assets/html/SinglePage.html
@@ -84,7 +84,7 @@
 
 						<div class="container__basket_drop_link">
 							<a href="#">Checkout</a><br>
-							<a href="#">Go to cart</a>
+							<a href="../html/ShoppingCart.html">Go to cart</a>
 						</div>
 					</div>
 				</div>
@@ -146,7 +146,7 @@
 					</div>
 				</li>
 				<li><a href="#">Women</a></li>
-				<li><a href="#">Kids</a></li>
+				<li><a href="Checkout.html">Kids</a></li>
 				<li><a href="#">Accoseriese</a></li>
 				<li><a href="#">Featured</a></li>
 				<li><a href="#">Hot Deals</a></li>
@@ -161,7 +161,7 @@
 			</div>
 
 			<div class="text__arrivals">
-				<p>Home / Men / <span>New Arrivals</span></p>
+				<p><a href="../../index.html">Home</a> / <a href="SinglePage.html">Women</a> / <span>New Arrivals</span></p>
 			</div>
 		</div>
 	</div>
