--- a/DZ5/assets/html/Checkout.html
+++ b/DZ5/assets/html/Checkout.html
@@ -145,7 +145,7 @@
 						</div>
 					</div>
 				</li>
-				<li><a href="#">Women</a></li>
+				<li><a href="SinglePage.html">Women</a></li>
 				<li><a href="#">Kids</a></li>
 				<li><a href="#">Accoseriese</a></li>
 				<li><a href="#">Featured</a></li>
