--- a/DZ5/assets/html/ShoppingCart.html
+++ b/DZ5/assets/html/ShoppingCart.html
@@ -83,7 +83,7 @@
 						</div>
 
 						<div class="container__basket_drop_link">
-							<a href="#">Checkout</a><br>
+							<a href="Checkout.html">Checkout</a><br>
 							<a href="../html/ShoppingCart.html">Go to cart</a>
 						</div>
 					</div>
