--- a/DZ5/assets/html/SinglePage.html
+++ b/DZ5/assets/html/SinglePage.html
@@ -83,7 +83,7 @@
 						</div>
 
 						<div class="container__basket_drop_link">
-							<a href="#">Checkout</a><br>
+							<a href="Checkout.html">Checkout</a><br>
 							<a href="../html/ShoppingCart.html">Go to cart</a>
 						</div>
 					</div>
@@ -146,7 +146,7 @@
 					</div>
 				</li>
 				<li><a href="#">Women</a></li>
-				<li><a href="Checkout.html">Kids</a></li>
+				<li><a href="#">Kids</a></li>
 				<li><a href="#">Accoseriese</a></li>
 				<li><a href="#">Featured</a></li>
 				<li><a href="#">Hot Deals</a></li>
