--- a/DZ5/index.html
+++ b/DZ5/index.html
@@ -82,7 +82,7 @@
 						</div>
 
 						<div class="container__basket_drop_link">
-							<a href="#">Checkout</a><br>
+							<a href="assets/html/Checkout.html">Checkout</a><br>
 							<a href="assets/html/ShoppingCart.html">Go to cart</a>
 						</div>
 					</div>
@@ -145,7 +145,7 @@
 					</div>
 				</li>
 				<li><a href="assets/html/SinglePage.html">Women</a></li>
-				<li><a href="assets/html/Checkout.html">Kids</a></li>
+				<li><a href="#">Kids</a></li>
 				<li><a href="#">Accoseriese</a></li>
 				<li><a href="#">Featured</a></li>
 				<li><a href="#">Hot Deals</a></li>
