--- a/responsiveWebsite/index.html
+++ b/responsiveWebsite/index.html
@@ -25,6 +25,10 @@
 					<li><a href="#">FAQ</a></li>
 				</ul>
 			</nav>
+
+			<div class="header__button">
+				<a href="#"><img src="assets/img/Vector.png" alt=""></a>
+			</div>
 		</div>
 
 		<div class="header__container2">
@@ -33,17 +37,30 @@
 			<a href="#">отправить посылку</a>
 		</div>
 	</header>
+	
+	<!-- for mobile -->
+
+	<div class="container13">
+		<div class="container13__content">
+			<h1>ПРИДУМАЙТЕ ЧТО ОТПРАВИТЬ</h1>
+			<h2>А посылка доедет сама</h2>
+			<a href="#">отправить посылку</a>
+		</div>
+	</div>
 
 	<div class="container3">
-		<div class="container3__delivery">
-			<div class="container3__img">
-				<img src="assets/img/Group 2.png" alt="">
+		<div class="container3__mainText">
+				<h1>Мы - агрегатор служб доставки</h1>
 			</div>
-
+		<div class="container3__delivery">
 			<div class="container3__text">
 				<h1>Мы - агрегатор служб доставки</h1>
 				<p>С нами удобно вам, вашим клиентам и курьерским службам. Для вас наши услуги бесплатны, так как мы получаем бонусы от служб доставок за предоставленный объем заказов, а вы получаете надежный сервис в подарок!</p>
 				<a href="#">Отправить посылку</a>
+			</div>
+
+			<div class="container3__img">
+				<img src="assets/img/Group 2.png" alt="">
 			</div>
 		</div>
 	</div>
@@ -153,42 +170,42 @@
 		<div class="container8__content">
 			<div class="container8__block">
 				<div class="container8__block__img">
-					<img src="assets/img/Layer 3.png" alt="">
+					<img src="assets/img/Layer 3.png" class="container8__img1" alt="">
 				</div>
 				<p>Бесплатный сервис</p>
 			</div>
 
 			<div class="container8__block">
 				<div class="container8__block__img">
-					<img src="assets/img/Layer 1.png" alt="">
+					<img src="assets/img/Layer 1.png" class="container8__img2" alt="">
 				</div>
 				<p>Огромный выбор вариантов доставки</p>
 			</div>
 
 			<div class="container8__block">
 				<div class="container8__block__img">
-					<img src="assets/img/Layer 6.png" alt="">
+					<img src="assets/img/Layer 6.png" class="container8__img3" alt="">
 				</div>
 				<p>4 параметра лучшего предложения</p>
 			</div>
 
 			<div class="container8__block">
 				<div class="container8__block__img">
-					<img src="assets/img/Layer 5.png" alt="">
+					<img src="assets/img/Layer 5.png" class="container8__img4" alt="">
 				</div>
 				<p>Удобство заказа</p>
 			</div>
 
 			<div class="container8__block">
 				<div class="container8__block__img">
-					<img src="assets/img/Layer 2.png" alt="">
+					<img src="assets/img/Layer 2.png" class="container8__img5" alt="">
 				</div>
 				<p>Online-поддержка</p>
 			</div>
 
 			<div class="container8__block">
 				<div class="container8__block__img">
-					<img src="assets/img/Layer 4.png" alt="">
+					<img src="assets/img/Layer 4.png" class="container8__img6" alt="">
 				</div>
 				<p>Единый номер отслеживания</p>
 			</div>
@@ -203,7 +220,7 @@
 		<div class="container9__content">
 			<div class="container9__block">
 				<div class="container9__block__img">
-					<img src="assets/img/Forma 1.png" alt="">
+					<img src="assets/img/Forma 1.png" class="container9__img1" alt="">
 				</div>
 				<h2>Страховка отправлений</h2>
 				<p>Контроль работы курьеров в онлайн режиме. Страхование по запросу клиента Каждый куръер находится под пристальным вниманием менеджеров SendIt</p>
@@ -212,7 +229,7 @@
 
 			<div class="container9__block">
 				<div class="container9__block__img">
-					<img src="assets/img/Forma 1-2.png" alt="">
+					<img src="assets/img/Forma 1-2.png" class="container9__img2" alt="">
 				</div>
 				<h2>Прозрачность расчетов</h2>
 				<p>Чтобы узнать точную стоимость отправления вам не нужно связываться с каждой курьерской службой в отдельности и сравнивать полученные предложения, просто воспользуйтесь нашим сервисом</p>
@@ -221,7 +238,7 @@
 
 			<div class="container9__block">
 				<div class="container9__block__img">
-					<img src="assets/img/Forma 1-1.png" alt="">
+					<img src="assets/img/Forma 1-1.png" class="container9__img3" alt="">
 				</div>
 				<h2>Лучшие поставщики</h2>
 				<p>Мы работаем с самыми надежными и известными операторами доставки. Проверка надежности курьерской компании, экспертная оценка качества предоставляемых услуг</p>
